@@ -164,7 +164,7 @@ class TestProgram(object):
             self.test = self.testLoader.loadTestsFromNames(self.testNames,
                                                            self.module)
 
-    def _do_discovery(self, argv, Loader=loader.TestLoader):
+    def _do_discovery(self, argv, Loader=None):
         # handle command line args for test discovery
         self.progName = '%s discover' % self.progName
         import optparse
@@ -214,7 +214,7 @@ class TestProgram(object):
         pattern = options.pattern
         top_level_dir = options.top
 
-        loader = Loader()
+        loader = self.testLoader if Loader is None else Loader()
         self.test = loader.discover(start_dir, pattern, top_level_dir)
 
     def runTests(self):
